--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    ndkVersion "22.1.7171670"
+    //ndkVersion "22.1.7171670"
 
     buildTypes {
         release {
@@ -54,5 +54,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-runtime:2.5.1'
     //implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
+    implementation 'com.google.android.material:material:1.5.0'
+
 
 }
